@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Cabaz{
- Listaprodutores
- Listaprodutos
- dia
}
class ClienteProdutorEmpresa{
- designacao
- id
- localizacao
}
class Pedido{
- Listaprodutores
- Listaprodutos
- dia
}
class ListaExpedicao{
- dia
- listaExpedicoes
}
class Localizacao{
- locId
- latitude
- longitude
}




Vaccine "*" -- "1" VaccineType : is of >
SNSUser "*" -- "1" Receptionist : is registered by >
Receptionist "1" -- "*" SNSUser : registers arrival of >
Receptionist "1"-- "1..*" Appointment : checks >
SNSUser "1" -- "*" AdverseReaction : has >
SNSUser "1" -- "*" Notification : receives >

Company "1" -- "*" VaccinationCenter : manages >
Company "1" -- "*" SNSUser : knows >
MassVaccinationCenter "*" -- "1" VaccineType : administers >
HealthcareCenter "1..*" -- "*" VaccineType : administers >
VaccinationCenter "1" -- "1" CenterCoordinator : has >
VaccinationCertificate "1" -- "1" SNSUser : requested by >
VaccinationCertificate "1" -- "1" Nurse : requested by >
Nurse "1..*" -- "*" AdverseReaction : registers >
Nurse "1" -- "*" VaccineAdministration : performs >
VaccineAdministration "1" -- "1" Appointment : enables <
Appointment "1"--"1" Receptionist : requested by >
Appointment "1"--"1" SNSUser : requested by >

VaccineAdministration "*" -- "1" SNSUser : administered on >


Administrator "1..*" -- "*" Nurse : registers >
Administrator "1..*"-- "*" Receptionist : registers >
Administrator "1..*"-- "*" VaccinationCenter : registers >
Administrator "1..*"-- "*"  CenterCoordinator : registers >
Administrator "1..*"-- "*" SNSUser : registers >


Slot "*"--"1" DaySchedule : has <
HealthCondition "*" -- "1" SNSUser : has <
VaccinationHistory"1" --"1"SNSUser : has <

ACES"1" -- "1..*" HealthcareCenter :owns >
ARS"1" -- "1..*" HealthcareCenter : owns >

Company "1" -- "*" Vaccine : applies >
DaySchedule "*" -- "1" VaccinationCenter : has <
Role"1" -- "*"Employee : has <

Company "1" --"*" Employee : employ >
Company "1" -- "*" Administrator: knows >
Administrator"1" -- "*" Employee: registers >

Company "1" -- "*" VaccineType : promotes administration >
Company "1" -- "1..*" Role: knows >
Administrator "1" -- "1..*" Employee : knows >
Administrator "1" -- "1..*" Role : knows >
VaccineType "*" -- "1" Administrator : created by >
Administrator "1..*" -- "*" Vaccine : registers >

AdministrationProcess "1" -- "1..*" Dose : has >

Vaccine "1" -- "1..*" AdministrationProcess : has >
VaccineAdministration "1" -- "1" Dose : uses >

Appointment "1.." -- "1" VaccineType : is associated with >


@enduml